Bug 224517 - screen not locked on suspend or hibernate (screen saver not activated)
Summary: screen not locked on suspend or hibernate (screen saver not activated)
Status: RESOLVED FIXED
Alias: None
Product: solid
Classification: Unmaintained
Component: powermanagement-daemon (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Unspecified
: NOR major
Target Milestone: ---
Assignee: Dario Freddi
URL:
Keywords:
: 174117 234925 253730 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-01-27 20:17 UTC by Per Ångström
Modified: 2010-11-10 01:17 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Per Ångström 2010-01-27 20:17:00 UTC
Version:            (using Devel)
Installed from:    Compiled sources

KDE 4.3.95, Ubuntu 10.4 Alpha 2+.

I find that KDE will not lock the screen when I suspend to RAM or hibernate to disk, if I initiate the action from within KDE. However, if I press my laptop's Fn-key suspend-to-RAM combination, the screen saver is activated and the screen is locked upon resume, just as it should be. In the latter case, just before the machine is suspended, I get a reassuring notification about the screen saver being activated. In the former case, that notification is missing.

My desktop machine running KDE 4.3.4 on openSUSE always locks the screen on suspend, so this may be a regression, or possibly a Ubuntu thing.
Comment 1 Per Ångström 2010-01-28 09:09:14 UTC
After installing KDE 4.3.95 on a desktop machine running openSUSE 11.2, I see that it behaves as expected, with the screen saver properly activated just before suspend.

I'm beginning to think this is an Ubuntu issue.
Comment 2 Tom Chiverton 2010-04-30 18:56:27 UTC
Kubuntu 10.4 appears to have fixed this.
Comment 3 Tom Chiverton 2010-05-01 16:00:37 UTC
Sorry, not fixed, just no longer happens all the time- only most of the time. Probably an artefact of the underlying timing issue.
Comment 4 Eckhart Wörner 2010-05-12 00:46:44 UTC
Bug has also been reported as http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=580370
Comment 5 Tom Chiverton 2010-07-27 14:44:42 UTC
Broken in 4.5 RC2 too
Comment 6 Beat Wolf 2010-07-27 16:24:36 UTC
security issue, marking as major
Comment 7 Tom Chiverton 2010-07-27 20:57:31 UTC
Just to clear up what happens currently.

Suspend to disk (power button or via task bar button), and then the machine hibernates.

Upon resume, what was on the screen (i.e. could be the users bank !) reappears. This happens almost every time. About half the time, it's possible to move the mouse cursor too.

Once the disk calms down from the resume, the screen saver does activate.
Comment 8 Tom Chiverton 2010-07-30 11:09:33 UTC
See also #174117
Comment 9 Christoph Feck 2010-10-10 11:45:46 UTC
*** Bug 253730 has been marked as a duplicate of this bug. ***
Comment 10 Dario Freddi 2010-11-10 01:08:48 UTC
*** Bug 234925 has been marked as a duplicate of this bug. ***
Comment 11 Dario Freddi 2010-11-10 01:15:25 UTC
*** Bug 174117 has been marked as a duplicate of this bug. ***
Comment 12 Dario Freddi 2010-11-10 01:17:06 UTC
SVN commit 1194836 by dafre:

BUG: 224517

Explicitely wait for the screensaver Lock to be finished before carrying out any other action.

 M  +2 -1      suspendsession.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1194836