BUG: 224517

Explicitely wait for the screensaver Lock to be finished before carrying out any other action.

svn path=/trunk/KDE/kdebase/workspace/; revision=1194836